--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,27 +1,26 @@
-on: ["push", "pull_request"]
-
-name: Test Coveralls
-
+on: 
+    push:
+        branches:
+            - main
+    pull_request:
+      types: [opened, synchronize, reopened]
 jobs:
-
   build:
-    name: Build
-    runs-on: ubuntu-latest
+ 
+    runs-on: windows-latest
+ 
     steps:
-
-    - uses: actions/checkout@v1
-
-    - name: Use Node.js 10.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: 10.x
-
-    - name: npm install, make test-coverage
-      run: |
-        npm install
-        make test-coverage
-
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v1
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+           dotnet-version: 3.0.100
+      - name: Generate coverage report
+        run: |
+          cd ./tests/TicketStore.Tests/
+          dotnet test /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=lcov
+      - name: Publish coverage report to coveralls.io
+        uses: coverallsapp/github-action@v1.0.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./Tests/TicketStore.Tests/TestResults/coverage.info
