--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
            dotnet-version: 3.0.100
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
+      - name: Run unit tests
+        run: dotnet test --no-build --configuration Release
       - name: Generate coverage report
         run: |
           cd ./tests
