--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,3 +1,4 @@
+name: Code coverage
 on: 
     push:
         branches:
@@ -28,7 +29,7 @@ jobs:
       - name: Generate coverage report
         run: |
           cd ./tests
-          dotnet test /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=lcov --collect:"Code Coverage" 
+          dotnet test -f netcoreapp2.1 --no-build --no-restore -f netcoreapp2.1 /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=lcov --collect:"Code Coverage" 
       - name: Publish coverage report to coveralls.io
         uses: coverallsapp/github-action@v1.0.1
         with:
